fix horizontal scrolling on iPad

--- a/css/page.css
+++ b/css/page.css
@@ -549,3 +549,8 @@ body #buorgclose {
 	position: absolute;
 	z-index: 1;
 }
+
+#nav-grid {
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+}
